[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/general/VarsAndDesign.tscn" type="PackedScene" id=1]
[ext_resource path="res://graphics/RoomCAD_Layout.png" type="Texture" id=2]
[ext_resource path="res://src/rooms/Room_TH_CAD.gd" type="Script" id=3]
[ext_resource path="res://scenes/general/MapOpen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/general/CADTableRow.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/general/CADLargeTableRow.tscn" type="PackedScene" id=6]
[ext_resource path="res://graphics/TransparentButton.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "LeaveCAD"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/RoomSelectFade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 0.535887, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.333333 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Control/RoomSelect_AULA:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Control/RoomSelect_AULA:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Control/RoomSelect_CLASS:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Control/RoomSelect_CLASS:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/Control/RoomSelect_MAP:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/Control/RoomSelect_MAP:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="RoomCAD" type="Node2D"]
script = ExtResource( 3 )

[node name="Map" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 243.0
margin_top = -90.0
margin_right = 673.0
margin_bottom = 556.0
justForFunctions = true

[node name="RoomLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="RoomLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.87451, 0.831373, 0.733333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TableRow" parent="RoomLayer" instance=ExtResource( 5 )]
margin_top = 128.0
margin_bottom = 193.0

[node name="TableRow1" parent="RoomLayer" instance=ExtResource( 5 )]
margin_top = 222.0
margin_bottom = 287.0

[node name="TableRow2" parent="RoomLayer" instance=ExtResource( 5 )]
margin_top = 318.0
margin_bottom = 383.0

[node name="CollectableMap" type="ColorRect" parent="RoomLayer/TableRow2"]
anchor_left = 0.552
anchor_right = 0.552
margin_left = -6.16001
margin_top = 5.0
margin_right = 4.83999
margin_bottom = 58.0
rect_rotation = 7.58695
color = Color( 0.262745, 0.615686, 0.929412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapCollection" type="TouchScreenButton" parent="RoomLayer/TableRow2/CollectableMap"]
position = Vector2( -1.94887, -2.12095 )
scale = Vector2( 0.0190718, 0.0946343 )
normal = ExtResource( 7 )

[node name="TableRow3" parent="RoomLayer" instance=ExtResource( 5 )]
margin_top = 412.0
margin_bottom = 477.0

[node name="TableRow4" parent="RoomLayer" instance=ExtResource( 5 )]
anchor_left = 0.8
anchor_right = 1.0
margin_left = -0.200012
margin_top = 128.0
margin_right = 0.0
margin_bottom = 193.0

[node name="TableRow5" parent="RoomLayer" instance=ExtResource( 5 )]
anchor_left = 0.8
anchor_right = 1.0
margin_left = -0.200012
margin_top = 222.0
margin_right = 0.0
margin_bottom = 287.0

[node name="TableRow6" parent="RoomLayer" instance=ExtResource( 5 )]
anchor_left = 0.8
anchor_right = 1.0
margin_left = -0.200012
margin_top = 318.0
margin_right = 0.0
margin_bottom = 383.0

[node name="TableRow7" parent="RoomLayer" instance=ExtResource( 5 )]
anchor_left = 0.8
anchor_right = 1.0
margin_left = -0.200012
margin_top = 412.0
margin_right = 0.0
margin_bottom = 477.0

[node name="TableRow8" parent="RoomLayer" instance=ExtResource( 6 )]
anchor_left = 0.305
anchor_right = 0.705
margin_left = -0.320007
margin_top = 128.0
margin_right = -0.119995
margin_bottom = 193.0

[node name="TableRow9" parent="RoomLayer" instance=ExtResource( 6 )]
anchor_left = 0.305
anchor_right = 0.705
margin_left = -0.320007
margin_top = 222.0
margin_right = -0.119995
margin_bottom = 287.0

[node name="TableRow10" parent="RoomLayer" instance=ExtResource( 6 )]
anchor_left = 0.305
anchor_right = 0.705
margin_left = -0.320007
margin_top = 318.0
margin_right = -0.119995
margin_bottom = 383.0

[node name="TableRow11" parent="RoomLayer" instance=ExtResource( 6 )]
anchor_left = 0.305
anchor_right = 0.705
margin_left = -0.320007
margin_top = 412.0
margin_right = -0.119995
margin_bottom = 477.0

[node name="Plakat" type="ColorRect" parent="RoomLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -69.5
margin_right = 69.5
margin_bottom = 82.0
color = Color( 0.372549, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RoomLayer/Plakat"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -92.0
margin_bottom = -54.0
rect_scale = Vector2( 3, 3 )
text = "LINK"
align = 1
valign = 1

[node name="ClickedLinkToExtern" type="TouchScreenButton" parent="RoomLayer/Plakat"]
position = Vector2( 0.899811, 0.720543 )
scale = Vector2( 0.170663, 0.136154 )
normal = ExtResource( 7 )

[node name="Door" type="ColorRect" parent="RoomLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -86.0
margin_top = -83.0
margin_bottom = -5.0
color = Color( 0.533333, 0.32549, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RoomLayer/Door"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -43.0
margin_bottom = -39.0
rect_scale = Vector2( 2, 2 )
text = "DOOR"
align = 1
valign = 1

[node name="ExitCADRoom" type="TouchScreenButton" parent="RoomLayer/Door"]
scale = Vector2( 0.107119, 0.129721 )
normal = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/HBoxContainer"]
visible = false
position = Vector2( 512, 300 )
scale = Vector2( 3.77075, 2.7767 )
texture = ExtResource( 2 )

[node name="RoomSelectFade" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomSelect_AULA" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
margin_left = 237.0
margin_top = 150.0
margin_right = 487.0
margin_bottom = 300.0
color = Color( 0.854902, 0.607843, 0.258824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomSelect_AULA" type="TouchScreenButton" parent="CanvasLayer/Control/RoomSelect_AULA"]
position = Vector2( 0.705399, -0.325745 )
scale = Vector2( 0.311623, 0.25017 )
normal = ExtResource( 7 )

[node name="Label" type="Label" parent="CanvasLayer/Control/RoomSelect_AULA"]
modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -167.0
margin_bottom = -100.0
rect_scale = Vector2( 3, 3 )
text = "AULA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomSelect_CLASS" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -512.0
margin_top = 150.0
margin_right = -262.0
margin_bottom = 300.0
color = Color( 0.854902, 0.607843, 0.258824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomSelect_CLASS" type="TouchScreenButton" parent="CanvasLayer/Control/RoomSelect_CLASS"]
position = Vector2( -0.301902, -0.231628 )
scale = Vector2( 0.313, 0.251461 )
normal = ExtResource( 7 )

[node name="Label" type="Label" parent="CanvasLayer/Control/RoomSelect_CLASS"]
modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -167.0
margin_bottom = -100.0
rect_scale = Vector2( 3, 3 )
text = "KLASSE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomSelect_MAP" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -125.0
margin_top = 321.0
margin_right = 125.0
margin_bottom = 471.0
color = Color( 0.854902, 0.607843, 0.258824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomSelect_MAP" type="TouchScreenButton" parent="CanvasLayer/Control/RoomSelect_MAP"]
position = Vector2( 0.0427494, 0.0857182 )
scale = Vector2( 0.311733, 0.249981 )
normal = ExtResource( 7 )

[node name="Label" type="Label" parent="CanvasLayer/Control/RoomSelect_MAP"]
modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = -167.0
margin_bottom = -99.0
rect_scale = Vector2( 3, 3 )
text = "LAGEPLAN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomChangeFade" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VarsAndDesign" parent="CanvasLayer" instance=ExtResource( 1 )]
visible = false
z_index = 7
showMap = false

[node name="BackgoundUnfocus" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LeaveCAD = SubResource( 1 )
[connection signal="released" from="RoomLayer/TableRow2/CollectableMap/MapCollection" to="." method="_on_MapCollection_released"]
[connection signal="released" from="RoomLayer/Plakat/ClickedLinkToExtern" to="." method="_on_ClickedLinkToExtern_released"]
[connection signal="released" from="RoomLayer/Door/ExitCADRoom" to="." method="_on_ExitCADRoom_released"]
[connection signal="released" from="CanvasLayer/Control/RoomSelect_AULA/RoomSelect_AULA" to="." method="_on_RoomSelect_AULA_released"]
[connection signal="released" from="CanvasLayer/Control/RoomSelect_CLASS/RoomSelect_CLASS" to="." method="_on_RoomSelect_CLASS_released"]
[connection signal="pressed" from="CanvasLayer/Control/RoomSelect_MAP/RoomSelect_MAP" to="." method="_on_RoomSelect_MAP_pressed"]
[connection signal="released" from="CanvasLayer/Control/RoomSelect_MAP/RoomSelect_MAP" to="." method="_on_RoomSelect_MAP_released"]
